# LARA-LIDAR-Autonomous-Robot-Avoidance

./: .gitignore  README.md
src/lidar_car_controller/: obstacle_world.world  package.xml  setup.cfg  setup.py
src/lidar_car_controller/launch/: simulation.launch.py
src/lidar_car_controller/lidar_car_controller/: car_controller.py  obstacle_detector.py  path_tracer.py  vfh_controller.py
src/lidar_car_controller/scripts/: generate_world.py
src/lidar_car_controller/worlds/: maze_world.world  my_custom_world.world
src/lidar_car_description/: package.xml  setup.cfg  setup.py
src/lidar_car_description/launch/: display.launch.py
src/lidar_car_description/rviz/: lidar_car.rviz
src/lidar_car_description/urdf/: lidar_car.urdf.xacro
