<?xml version="1.0"?>
<package format="3">
  <name>lidar_car_description</name>
  <version>0.0.1</version>
  <description>URDF description for lidar car</description>
  <maintainer email="arun@todo.todo">arun</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>